app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app-name: app1
  name: webserver-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app-name: app1
  template:
    metadata:
      labels:
        app-name: app1
    spec:
      containers:
        - name: app1
          image: docker-registry.flavoursofindia.eu:5000/webserver/centos-nginx:1
          imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: dev
  labels:
    app-name: app1
    namespace: dev

spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app-name: app1

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingree
  namespace: dev
spec:
  rules:
  - host: nginx-test.flavoursofindia.eu
    http:
      paths:
      - backend:
          serviceName: app-service
          servicePort: 80
