example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec: 
  rules: 
  - host: prometheus-console.flavoursofindia.eu    
    http:  
      paths:  
      - backend:  
          serviceName: prometheus
          servicePort: 9090
